server with headless urho framework

--- a/OmniTanks.Components/OmniTanks.Components.csproj
+++ b/OmniTanks.Components/OmniTanks.Components.csproj
@@ -46,7 +46,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CosmeticsInfo.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="PlayerInstance.cs" />
+    <Compile Include="TankInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
